# jellypie-todo

./: .gitignore  CHANGELOG.md  README.md  USERMANUAL.md  install.sh  pyproject.toml
data/: com.github.jdalbey.jellypie.desktop  com.github.jdalbey.jellypie.metainfo.xml
src/jellypie/: __main__.py  config.py  custom.css  editor.py  helper.py  main.py  menu.py  minimap.py  navbar.py  notebook.py  statusbar.py  window.py
src/jellypie/style/: jellypie-formatted.lang  jellypie.xml
